--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "cz-conventional-changelog": "^3.3.0"
+    "cz-conventional-changelog": "^3.3.0",
+    "semantic-release": "^21.0.2"
   },
   "config": {
     "commitizen": {
