--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "conventional-changelog-conventionalcommits": "^5.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "semantic-release": "^21.0.2"
   },
