--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.2",
+    "@radix-ui/react-switch": "^1.0.2",
+    "@radix-ui/react-toggle": "^1.0.2",
     "@tailwindcss/typography": "^0.5.9",
     "@types/mdx": "^2.0.5",
     "@types/node": "20.2.0",
