--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/mdx": "^13.4.2",
     "@radix-ui/react-switch": "^1.0.2",
     "@radix-ui/react-toggle": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@tailwindcss/typography": "^0.5.9",
     "@types/mdx": "^2.0.5",
     "@types/node": "20.2.0",
