--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
-    "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
     "postcss": "8.4.23",
@@ -36,6 +35,9 @@
     "@semantic-release/git": "^10.0.1",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "8.41.0",
+    "eslint-plugin-mdx": "^2.1.0",
+    "prettier": "2.8.8",
     "semantic-release": "^21.0.2"
   },
   "config": {
