--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,10 @@
       "~/*": ["./public/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.{js,ts,jsx,tsx,mdx}",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
