--- a/package.json
+++ b/package.json
@@ -8,37 +8,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.4",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@tailwindcss/typography": "^0.5.9",
+    "clsx": "^1.2.1",
+    "next": "13.4.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^1.12.0"
+  },
+  "devDependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@types/mdx": "^2.0.5",
     "@types/node": "20.2.0",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "clsx": "^1.2.1",
-    "eslint-config-next": "13.4.3",
-    "next": "13.4.3",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwind-merge": "^1.12.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
-  },
-  "devDependencies": {
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.41.0",
+    "eslint-config-next": "13.4.3",
     "eslint-plugin-mdx": "^2.1.0",
+    "postcss": "8.4.23",
     "prettier": "2.8.8",
-    "semantic-release": "^21.0.2"
+    "semantic-release": "^21.0.2",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4"
   },
   "config": {
     "commitizen": {
